# manygames

./: .cvsignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  libtool  version.sh
doc/: .cvsignore  AUTHORS  IDEAS  Makefile.am  Makefile.in  TODO  manygames_info.txt  update_docs.sh
include/: Makefile.am  Makefile.in
include/manygames/: .cvsignore  Makefile.am  Makefile.in  alpha_image.hpp  extra_exceptions.hpp  framebuffer.hpp  image.hpp  image_converter.hpp  input_window.hpp  keyboard_input.hpp  magic_pointer.hpp  manygames_namespace.hpp  masked_image.hpp  mouse_input.hpp  my_defines.hpp  raster.hpp  rectangle.hpp  ref_count_object.hpp  rgbacolor.hpp  rgbcolor.hpp  template_functions.hpp  textized.hpp  useful_functions.hpp  xpm_image_loader.hpp
m4/: ChangeLog  Makefile.in
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES  POTFILES.in  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  manygames.pot
src/: .cvsignore  Makefile.am  Makefile.in  barf.cpp  emptyfile.cpp  manygames_config.hpp.in
src/generic/: .cvsignore  Makefile.am  Makefile.in  extra_exceptions.cpp
src/graphics/: .cvsignore  Makefile.am  Makefile.in  image_converter.cpp
src/input/: .cvsignore  Makefile.am  Makefile.in  keyboard_input.cpp  mouse_input.cpp
src/platform/: Makefile.am  Makefile.in
src/platform/X/: .cvsignore  Makefile.am  Makefile.in  fb_test.cpp  x_input_window.cpp  x_input_window.hpp
src/platform/gtkmm/: Makefile.am  Makefile.in  fb_test.cpp  fb_test.hpp  gtkmm_framebuffer.cpp  gtkmm_framebuffer.hpp  gtkmm_input_window.cpp  gtkmm_input_window.hpp
src/utils/: .cvsignore  Makefile.am  Makefile.in  README  gen-class-lgpl.cpp  gen-class.cpp
test/: .cvsignore  Makefile.am  Makefile.in  do_all_tests.sh  test_raster.cpp  test_rgbacolor.cpp  test_rgbcolor.cpp  testinclude.hpp
