EXTRA_DIST = 
SUBDIRS = utils generic graphics platform
INCLUDES = -I@top_srcdir@/include
lib_LTLIBRARIES = libmanygames.la

# A program to test compilation/linkage of the libraries.
bin_PROGRAMS = barf
barf_SOURCES = barf.cpp 
barf_LDADD = libmanygames.la

graphics_objects = graphics/image_converter.lo
generic_objects  = generic/extra_exceptions.lo

graphics_libs = graphics/libmanygames_graphics.la
generic_libs = generic/libmanygames_generic.la

libmanygames_la_SOURCES = emptyfile.cpp
libmanygames_la_LIBADD = $(graphics_libs) $(generic_libs)
#$(graphics_objects) $(generic_objects)
libmanygames_la_LDFLAGS = -module -shared -rpath @prefix@/lib 
