# add *.h, if there are any .h files.
manygamesincludedir=$(includedir)/$(PACKAGE)
manygamesinclude_HEADERS = \
	raster.hpp \
	rgbcolor.hpp \
	rgbacolor.hpp \
	image.hpp \
	alpha_image.hpp \
	image_converter.hpp \
	extra_exceptions.hpp \
	textized.hpp \
	\
	ref_count_object.hpp \
	magic_pointer.hpp \
	\
	my_defines.hpp \
	template_functions.hpp \
	useful_functions.hpp \
	\
	manygames_namespace.hpp
