# add *.h, if there are any .h files.
manygamesincludedir=$(includedir)/$(PACKAGE)
manygamesinclude_HEADERS = \
	framebuffer.hpp \
	raster.hpp \
	rgbcolor.hpp \
	rgbacolor.hpp \
	image.hpp \
	alpha_image.hpp \
        masked_image.hpp \
	image_converter.hpp \
	\
	extra_exceptions.hpp \
	textized.hpp \
	\
	mouse_input.hpp \
	keyboard_input.hpp \
	input_window.hpp \
	\
	rectangle.hpp \
	xpm_image_loader.hpp \
	\
	ref_count_object.hpp \
	magic_pointer.hpp \
	\
	my_defines.hpp \
	template_functions.hpp \
	useful_functions.hpp \
	\
	manygames_namespace.hpp
